# hazel

./: .gitignore  2do.txt  README.md  hazel.cabal
Hazel/: Completion.hs  CompletionGraph.hs  Conversion.hs  Core.hs  Hierarchy.hs  Normalize.hs  Parser.hs  StringWriter.hs  TBoxer.hs  Util.hs  Wrapper.hs  Writer.hs
Hazel/Parser/: Utils.hs
Hazel/Parser/OWL/: AST.hs  BCP47.hs  Functional.hs  RFC3987.hs  RFC5234.hs  SPARQL.hs
Test/: test.hs
cli/: Main.hs
doc/: cheatsheet.bib  cheatsheet.tex
src/Hazel/: Core.hs
test/: test.hs
test/Hazel/: CompletionSpec.hs  CoreSpec.hs  NormalizeSpec.hs  TestCases.hs  WrapperSpec.hs
test/data/: exercise38.owl
