name:                hazel
version:             0.1.0.0
synopsis: Reasoner for the EL description logic
description:
license: GPL3
license-file:        LICENSE
author: Felix Distel, Francesco Kriegel, Maximilian Marx
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options:       -Wall -Werror
  exposed-modules:     Hazel.Completion
                     , Hazel.Core
                     , Hazel.Normalize
  build-depends:       base ==4.6.*
                     , containers ==0.5.*
                     , text ==0.11.*
                     , hashable ==1.2.*
                     , mtl ==2.1.*

Test-Suite test-hazel
  ghc-options:     -Wall -Werror
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  build-depends:   base ==4.6.*
                 , containers ==0.5.*
                 , text ==0.11.*
                 , hazel
                 , hspec ==1.7.*
                 , hspec-discover ==0.2.*
                 , mtl ==2.1.*

source-repository head
  type:     git
  location: https://github.com/hazel-el/hazel.git
  branch:   master
